--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     />
     <meta name="theme-color" content="#0f0c29" />
     <link rel="stylesheet" href="./static/css/main.css" />
-    <!-- <link rel="icon" type="image/png" href="./favicon.ico" /> -->
+    <link rel="icon" type="assets/SamoyedIcon.png"  />
     <title>React Boilerplate</title>
   </head>
 
