--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
     />
     <meta name="theme-color" content="#0f0c29" />
     <link rel="stylesheet" href="./static/css/main.css" />
-    <link rel="icon" type="assets/SamoyedIcon.png"  />
-    <title>React Boilerplate</title>
+    <link rel="icon" type="image/png" href="assets/SamoyedIcon.png"  />
+    <title>Jet Portfolio Site</title>
   </head>
 
   <body class="p-0 m-0">
