--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,11 @@
     />
     <meta name="theme-color" content="#0f0c29" />
     <link rel="stylesheet" href="./static/css/main.css" />
-    <link rel="icon" type="image/png" href="assets/SamoyedIcon.png"  />
+    <link rel="icon" type="image/png" href="assets/SamoyedIcon.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Jet Portfolio Site</title>
   </head>
 
